Updated readme with licence information

--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-
 Sankore Player
 --------------
 
-Sankore player allows to view Sankore Uniboard files
+Sankore player allows to view Open-Sankore files
 
-Sankore player is licences under the LGPL licence
+Sankore player is licenced under the LGPL licence
 
-Copyright (c) 2011 Sankore Team
+« (©) Copyright 2010-2012 Groupement d'Interêt Public "Education Numérique en Afrique" »
+
+Sankore.org, the Free Digital Education Community
