Update licence version

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Sankore Player
 
 Sankore player allows to view Open-Sankore files
 
-Sankore player is licenced under the LGPL licence
+Sankore player is licenced under the LGPL licence v3.0
 
 « (©) Copyright 2010-2012 Groupement d'Interêt Public "Education Numérique en Afrique" »
 
